# getimg

./: .gitignore  pyproject.toml
getimg/: __init__.py  cli.py  get_image.py  getimg.py  pageparsers.py
