[tool.poetry]
name = "getimg"
version = "0.1.0"
description = "Get images from web page."
authors = ["takatoh"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
