[tool.poetry]
name = "getimg"
version = "0.2.0"
description = "Get images from web page."
authors = ["takatoh"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
getimg = "getimg.getimg:main"
