[tool.poetry]
name = "getimg"
version = "0.3.2"
description = "Get images from web page."
authors = ["takatoh"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.0.0"
requests = "^2.32.4"

[poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
getimg = "getimg.cli:main"
